Add preview support